--- a/portfolio-site-react/src/style/about_me.css
+++ b/portfolio-site-react/src/style/about_me.css
@@ -1,7 +1,8 @@
 
 
 .about_me_contents {
-  /* padding: 20px 20px; */
+  /* padding: 40px; */
+  /* height: 800px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,72 +62,6 @@
 
 
 
-/**** .contact ****/
-
-.contact {  
-  width: 90%;
-  /* height: 600px; */
-  overflow: scroll;  
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-
-.contact__item {
-  margin: 10px;
-  padding: 10px;
-  width: 200px;
-  height: 100px;
-
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-
-  text-decoration: none;
-  color: #000;
-
-  transition: all .4s ease;
-}
-
-.contact__item:hover {
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
-}
-
-
-.contact__item_name {
-  text-align: center;
-  font-size: 14px;
-  color: #000;
-}
-
-.contact__item_name.resume  a {
-  text-decoration: none;
-  color: #000;
-}
-
-.contact__item i {
-  margin-top: 4px;
-  font-size: 40px;
-  color: hsl(0, 0%, 60%);
-
-  transition: all .4s ease;
-}
-
-.contact__item i:hover {
-  color: hsl(0, 0%, 0%);
-}
-
-
-.contact__item.github i:hover {
-  color: #4078c0;
-}
-.contact__item.linkedin i:hover {
-  color: #0077b5;
-}
-
 
 
 
@@ -144,33 +79,6 @@
   .profile_image {      
     width: 200px;
     height: 250px;
-  }
-
-  .contact__item {
-    margin: 4px;
-    padding: 8px;
-    width: 150px;
-    height: 50px;
-
-    
-
-  }
-
-  .contact__item:hover {
-    box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
-  }
-
-
-  .contact__item_name {
-    text-align: center;
-    font-size: 14px;
-    color: #000;
-  }
-
-
-  .contact__item i {
-    font-size: 20px;
-
   }
 
 
@@ -193,32 +101,6 @@
     width: 120px;
     height: 120px;
     
-  }
-
-  .contact {
-    margin-top: 12px;
-    flex-direction: column;
-    height: 600px;
-    overflow: scroll;
-  }
-
-  .contact__item {
-    margin: 8px;
-    padding: 8px;
-    width: 120px;
-    height: 30px;
-
-  }
-
-
-  .contact__item_name {
-    font-size: 12px;
-  }
-
-
-  .contact__item i {
-    font-size: 24px;
-
   }
 
 
@@ -253,29 +135,6 @@
     
   }
 
-
-  .contact__item {
-    margin: 8px;
-    padding: 4px;
-    width: 100px;
-    height: 30px;
-
-  }
-
-  .contact__item:hover {
-    box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
-  }
-
-
-  .contact__item_name {
-    font-size: 8px;
-  }
-
-
-  .contact__item i {
-    font-size: 8px;
-
-  }
 
 
 }
