--- a/portfolio-site-react/src/Home.css
+++ b/portfolio-site-react/src/Home.css
@@ -12,7 +12,7 @@
   margin-top: 100px;
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   /* border-radius: 8px; */
-  padding-bottom: 160px;
+  padding-bottom: 200px;
   width: 95%;
   /* height: 100vh; */
   /* max-height: 600px; */
@@ -81,13 +81,12 @@
 
 .footer__item {
   /* z-index: 10; */
-  /* margin-top: 100px; */
+  margin-top: 40px;
   /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
   padding: 20px 0;
   width: 90%;
   height: 80%;
-  /* max-height: 600px; */
-
+  /* max-height: 300px; */
   /* background-color: #000; */
   /* color: #fff;  */
   /* background-color: transparent; */
@@ -108,7 +107,8 @@
   padding: 20px 0; 
   width: 90%;
   /* height: 800px; */
-  overflow: scroll;  
+  overflow: scroll; 
+
   
   display: flex;
   flex-direction: column;
@@ -202,9 +202,16 @@
   margin-top: 20px;
   padding: 0 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+.image_source__items {
+  display: flex;
+  align-items: center;
+}
+
 
 .image_source__item {
   padding: 10px 20px;
@@ -310,8 +317,8 @@
 
 
   .footer__item {
-    margin-top: 50px;
-    padding: 40px;
+    margin-top: 30px;
+    padding: 20px;
   }
 
 
@@ -343,6 +350,7 @@
   .image_source__heading {
     margin-top: 0;
     padding: 0;
+    width: 100%;
   }
 
 }
@@ -360,14 +368,22 @@
 
   .footer__item {
     margin-top: 20px;
+    padding: 20px 0;
     height: 200px;    
+    min-height: 320px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
   }
 
 
   .contact {
-    margin-top: 12px;
+    margin-top: 20px;
     padding: 20px 0; 
-    flex-direction: column;
+    /* flex-direction: column; */
     /* height: 00px; */
     overflow: scroll;
   }
@@ -398,8 +414,9 @@
   }
 
   .image_source__items {
-    margin-top: 10px;
-    padding: 0 10px;    
+    margin-top: 0;
+    
+    padding: 20px 0;   
     
     display: flex;
     flex-direction: column;
@@ -408,6 +425,7 @@
 
     overflow: scroll;
   }
+  
   
   .image_source__item {
     margin-top: 12px;
@@ -434,8 +452,9 @@
   }
 
   .footer__item {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     padding: 10px 0;
+    min-height: 150px;
     overflow: scroll;
   }  
 
@@ -490,7 +509,7 @@
 
 
   .image_source__item {
-    margin-top: 4px;
+    margin-top: 18px;
     padding: 4px 8px;
     width: 150px;
     font-size: 8px;    
