--- a/portfolio-site-react/src/style/about_me.css
+++ b/portfolio-site-react/src/style/about_me.css
@@ -1,7 +1,7 @@
 
 
 .about_me_contents {
-  /* padding: 40px; */
+  padding: 80px 0;
   /* height: 800px; */
   display: flex;
   flex-direction: column;
@@ -16,13 +16,15 @@
 
 .introduciton {
   /* padding: 20px 40px; */
-  width: 90%;
+  width: 80%;
+  /* flex-grow: 2; */
   display: flex;
   justify-content: space-evenly;
 }
 
 .intro_message {
   flex: 2;
+  /* flex-basis: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -39,17 +41,18 @@
 
  /* Individual to each of Introduciton and Contact */
 .intro_message__p {
-  line-height: 1.6;
+  line-height: 2;
   letter-spacing: 8px;
   font-size: 14px;
 }
 
 
 .profile_image {  
-
+  /* flex-grow: 1; */
   box-shadow: 0 0 10px 10px hsla(0, 0%, 80%);
-  width: 300px;
-  height: 350px;
+  /* padding: 20px; */
+  width: 250px;
+  height: 300px;
   background-image: url('../assets/profile_image_side_edit.jpeg');
   background-position: center;
   background-size: cover;
@@ -68,6 +71,9 @@
 
 
 @media(max-width: 1024px) {
+  .introduciton {
+    width: 90%;
+  }
   .intro_message__heading {
     font-size: 24px;
   }
@@ -109,7 +115,7 @@
 
 @media(max-width: 425px) {  
 
-  .introduciton {
+  #about_me_contents {
     position: relative;
   }
 
@@ -121,14 +127,15 @@
 
   .intro_message__p {
     margin-top: 38px;
+    min-width: 350px;
     font-size: 8px;
   }
 
 
   .profile_image {  
     position: absolute;
-    top: 24px;
-    right: -22px;
+    top: 30%;
+    right: 5%;
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%);
     width: 80px;
     height: 80px;
@@ -137,9 +144,26 @@
 
 
 
+
 }
 
 
 @media(max-width: 375px) {
-  
+  .profile_image {  
+    top: 40%;
+    right: 10%;
+  }  
+
+  .intro_message__p {
+    margin-top: 60px;    
+    min-width: 270px;
+  }
+}
+
+@media(max-width: 375px) {
+  .profile_image {  
+    /* position: absolute; */
+    /* top: 30%;     */
+  }  
+
 }
