--- a/portfolio-site-react/src/components/Menu/MenuButton.css
+++ b/portfolio-site-react/src/components/Menu/MenuButton.css
@@ -6,6 +6,7 @@
   
   background-color: hsl(0, 0%, 60%);
   margin-bottom: 20px;
+  box-shadow: 0 0 30px 10px hsl(0, 0%, 60%);
   width: 50px;
   height: 50px;
   border-radius: 50%;
