--- a/portfolio-site-react/src/components/Footer/Footer.css
+++ b/portfolio-site-react/src/components/Footer/Footer.css
@@ -84,15 +84,33 @@
   left: 15px;
   bottom: 30px;
 
+
+  /* border-radius: 50%; */
+  /* padding: 3%; */
   width: 50px;
   height: 50px;
+  /* background-color: hsla(0, 0%, 80%, 0.4); */
+   
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
+  transition: all .4s ease;
+
+  /* position: relative; */
 
 }
 
+/* .scroll_up:hover {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+} */
+
 .scroll_up__icon {
+  /* position: absolute;
+  top: 10%;
+  left: 27%; */
+
 
   font-size: 40px;
   color: #000;
@@ -103,9 +121,18 @@
 .scroll_up__icon:hover {
   opacity: 1;
   /* box-shadow:  0 0 10px 10px hsl(0, 0%, 40%); */
-  /* text-shadow: 0 */
+  text-shadow: 0px 5px hsl(0, 0%, 40%);;
+  
 
   cursor: pointer;
+}
+
+.top:hover {
+  transition: all .4s ease;
+}
+
+.top:hover {
+  /* text-shadow: 0px -5px hsl(0, 0%, 40%);; */
 }
 
 
