--- a/portfolio-site-react/src/components/Menu/Menu.css
+++ b/portfolio-site-react/src/components/Menu/Menu.css
@@ -2,7 +2,7 @@
   padding: 20px 0;
   /* width: 100vw; */
   width: 100vw;
-  height: 100px;
+  /* height: 100px; */
   /* height: 15vh; */
   background-color: hsla(0, 0%, 100%, 0.8);
   position: fixed;
