--- a/portfolio-site-react/src/components/Menu/Menu.css
+++ b/portfolio-site-react/src/components/Menu/Menu.css
@@ -1,28 +1,24 @@
 #flyoutMenu {
-  padding: 20px 0;
-  /* width: 100vw; */
-  width: 100vw;
-  /* height: 100px; */
-  /* height: 15vh; */
-  background-color: hsla(0, 0%, 100%, 0.8);
   position: fixed;
-  /* top: 0; */
   bottom: 0vh;
   left: 0vw;
-  transition: transform .3s
-              cubic-bezier(0, .52, 0, 1);
+
+  z-index: 100;
+
+  width: 100vw;
   
   display: flex;
   align-items: center;
   justify-content: center;
 
-  overflow: scroll;
-  /* z-index: 1000; */
-  z-index: 100;
-
+  background-color: hsla(0, 0%, 100%, 0.8);
   color: #000;
 
-  transition: all .4s ease;
+  transition: transform .4s
+              cubic-bezier(0, 10, 0, 0);
+
+  overflow: scroll;
+  
 
 }
 
@@ -56,17 +52,14 @@
 @media(max-width: 768px) {
 
   #flyoutMenu {
-    padding: 10px 0;
-    height: 150px;
+    height: 40vh;
   }  
 
 }
 
 @media(max-width: 425px) {
   #flyoutMenu {
-    padding: 10px 0;
-    height: 150px;
-    overflow: scroll;
+    height: 30vh;
   }  
 
 }
