--- a/portfolio-site-react/src/components/PageContents/AboutMe/AboutMe.css
+++ b/portfolio-site-react/src/components/PageContents/AboutMe/AboutMe.css
@@ -54,7 +54,7 @@
   width: 250px;
   height: 300px;
   /* background-image: url('../../assets/profile_image_side_edit.jpeg'); */
-  background-image: url('../../assets/profile_image_side_edit.jpeg');
+  background-image: url('../../../assets/profile_image_side_edit.jpeg');
   background-position: center;
   background-size: cover;
   /* background-attachment: fixed; */
@@ -114,7 +114,7 @@
 
   .profile_image {  
     position: absolute;
-    top: 30%;
+    top: 40%;
     right: 15%;      
   
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%);
@@ -148,7 +148,7 @@
 
 
   .profile_image {      
-    top: 25%;
+    top: 37%;
     right: 5%;
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%);
     width: 120px;
@@ -163,10 +163,6 @@
 
 
 @media(max-width: 375px) {
-  .profile_image {  
-    top: 20%;
-    right: 5%;
-  }  
 
   .intro_message__p {
     margin-top: 60px;    
@@ -174,8 +170,8 @@
   }
 
   .profile_image {  
-    top: 30%;
-    right: 0;
+    top: 37%;    
+    right: 3%;
     width: 80px;
     height: 80px;
   }  
@@ -185,8 +181,9 @@
 
 @media(max-width: 375px) {
   .profile_image {  
-    top: 40%;    
-    right: 10%;
+    top: 45%;    
+    right: 3%;
+    width: 80px;
+    height: 80px;
   }  
-
 }
