--- a/portfolio-site-react/src/components/PageList/PageList.css
+++ b/portfolio-site-react/src/components/PageList/PageList.css
@@ -1,4 +1,5 @@
 .page_list {
+  padding: 40px 0;
   /* height: 100%; */
 
   display: flex;
@@ -12,7 +13,7 @@
 }
 
 .page_list__heading {
-  margin-bottom: 14px;
+  /* margin-bottom: 14px; */
   font-size: 24px;
   color: #000;
   text-align: center;
@@ -20,8 +21,8 @@
 
 /*** .page_list__items ***/
 .page_list__items {
-  margin-top: 20px;
-  padding: 20px 20px;
+  /* margin-top: 40px; */
+  padding-top: 40px;
 
   display: flex;
   align-items: center;
@@ -155,15 +156,17 @@
 }
 
 @media(max-width: 768px) {
-
+  .page_list {
+    padding: 15px;
+  }
 
   .page_list__heading {
     font-size: 24px; 
   }
 
   .page_list__items {
-    margin-top: 10px;
-    padding: 0 10px;    
+    /* margin-top: 10px; */
+    padding-top: 15px;    
     
     display: flex;
     flex-direction: column;
