--- a/portfolio-site-react/src/components/ScrollUp/ScrollUp.css
+++ b/portfolio-site-react/src/components/ScrollUp/ScrollUp.css
@@ -1,15 +1,40 @@
 /* .scroll_up */
 .scroll_up {
-  padding: 20px 0;
-  width: 100%;
-  height: 50px;
+  z-index: 200;
+  position: absolute;
+  left: 2%;
+  bottom: 30px;
 
-  text-align: center;
+
+  /* border-radius: 50%; */
+  /* padding: 3%; */
+  width: 50px;
+  height: 50px;
+  /* background-color: hsla(0, 0%, 80%, 0.4); */
+   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  transition: all .4s ease;
+
+  /* position: relative; */
+
 }
 
+/* .scroll_up:hover {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+} */
+
 .scroll_up__icon {
+  /* position: absolute;
+  top: 10%;
+  left: 27%; */
+
+
   font-size: 40px;
-  color: #333333;
+  color: #000;
   opacity: .6;
   transition: all .4s ease;
 }
@@ -17,5 +42,53 @@
 .scroll_up__icon:hover {
   opacity: 1;
   /* box-shadow:  0 0 10px 10px hsl(0, 0%, 40%); */
-  /* text-shadow: 0 0 10px 10px hsl(0, 0%, 40%); */
+  text-shadow: 0px 5px hsl(0, 0%, 40%);;
+  
+
+  cursor: pointer;
+}
+
+.top:hover {
+  transition: all .4s ease;
+}
+
+.top:hover {
+  /* text-shadow: 0px -5px hsl(0, 0%, 40%);; */
+}
+
+
+
+@media(max-width: 768px) {  
+
+  .scroll_up {
+    font-size: 8px;
+  }
+
+  .scroll_up__icon {
+    font-size: 30px;
+  }
+
+}
+
+
+
+@media(max-width: 425px) {
+
+  .scroll_up {
+    font-size: 8px;
+    bottom: 14px;
+  }
+
+  .scroll_up__icon {
+    font-size: 15px;
+  }
+
+}
+
+
+@media(max-width: 375px) {
+  .scroll_up {    
+    bottom: 10px;
+  }
+
 }
