--- a/portfolio-site-react/src/components/PageContents/Skill/Skill.css
+++ b/portfolio-site-react/src/components/PageContents/Skill/Skill.css
@@ -32,7 +32,7 @@
 }
 
 .skill__item_name {
-  font-size: 14px;
+  font-size: 24px;
 }
 
 .skill__item_icon {
@@ -70,7 +70,7 @@
 
 
   .skill__item_name {
-    font-size: 8px;
+    font-size: 16px;
   }
 
   .skill__item_icon {
@@ -111,7 +111,7 @@
 
 
   .skill__item_name {
-    font-size: 8px;
+    font-size: 12px;
   }
 
   .skill__item_icon {
@@ -133,4 +133,22 @@
   .skill__item_name {
     letter-spacing: 8px;
   }
+}
+
+
+@media(max-width: 325px) {
+
+  .skill_item {  
+    margin: 10px;
+
+    width: 80px;
+    height: 70px; 
+
+  }
+
+
+  .skill__item_name {
+    font-size: 10px;
+  }
+
 }
