--- a/portfolio-site-react/src/components/PageContents/Section.css
+++ b/portfolio-site-react/src/components/PageContents/Section.css
@@ -30,7 +30,7 @@
   /* z-index: 10; */
   margin-top: 100px;
   /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
-  padding: 20px 0;
+  padding: 20px 20px;
   width: 85%;
   /* height: 80%; */
   /* min-height: 600px; */
