--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -87,18 +87,22 @@
 
   overflow: scroll;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 
 .portfolio_list__item {
-  /* margin: 4px; */
+  margin: 4px;
   /* border-bottom: 1px solid #fff; */
   /* border-bottom: 1px solid #000;   */
   box-shadow: 0 0 1px 1px hsl(0, 0%, 80%);
 
   padding: 14px 8px;
   /* padding-left: 8px; */
-  width: 100%;
+  width: 90%;
   /* text-align: center; */
 
   transition: all .4s ease;
