--- a/portfolio-site-react/src/components/Menu/Menu.css
+++ b/portfolio-site-react/src/components/Menu/Menu.css
@@ -52,14 +52,15 @@
 @media(max-width: 768px) {
 
   #flyoutMenu {
-    height: 40vh;
+    padding: 20px 0;
+    /* height: 40vh; */
   }  
 
 }
 
 @media(max-width: 425px) {
   #flyoutMenu {
-    height: 40vh;
+    /* height: 40vh; */
   }  
 
 }
