--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -27,7 +27,7 @@
 
 
 .portfolio_list_container,
-.portfolio_data_container {
+.portfolio_desc_container {
   padding: 20px;
   height: 80%;
 
@@ -51,7 +51,7 @@
   width: 100%;
   /* height: 100%; */
   height: 90%;
-  /* max-height: 600px; */
+  /* max-height: 600px; */  
 
 } 
 
@@ -167,7 +167,7 @@
 
 
 /* .portfolio_data_container*/
-.portfolio_data_container {
+.portfolio_desc_container {
   flex-basis: 60%;
   height: 100%;
   min-height: 600px;
@@ -217,8 +217,9 @@
 .portfolio_image {
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   width: 100%;
-  height: 90%;
-  /* max-height: 500px; */
+  /* width: 600px; */
+  height: 95%;
+  min-height: 350px;
   overflow: scroll;
 }
 
@@ -233,7 +234,7 @@
   }
 
   .portfolio_list_container,
-  .portfolio_data_container {
+  .portfolio_desc_container {
     /* padding: 20px; */
     
   }
@@ -322,7 +323,7 @@
   }
 
   .portfolio_list_container,
-  .portfolio_data_container {
+  .portfolio_desc_container {
     padding: 8px;
   }
 
@@ -339,11 +340,6 @@
   .portfolio_list__background {
     max-height: 193px;
   }
-
-  .portfolio_data_container {
-    min-height: 400px;
-  }
-
   .portfolio_data__title {  
     font-size: 16px;
     margin-top: 8px;
@@ -360,6 +356,11 @@
 
 
   
+  .portfolio_desc_container {
+    min-height: 400px;
+  }
+
+
   .user_story__heading,
   .dev_story__heading { 
     margin-top: 12px;
