--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -18,20 +18,19 @@
 
 .portfolio_contents {
   display: flex;
-  /* flex-direction: column; */
-  /* flex-direction: row; */
-  /* justify-content: center; */
+  /* flex-direction: column;  */
+  /* flex-direction: row;  */
+  justify-content: center;
 }
 
 
 
 
-.portfolio_list_container,
-.portfolio_desc_container {
+.PortfolioList,
+.PortfolioDesc {
   padding: 20px;
   height: 80%;
-
-
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,25 +41,13 @@
 }
 
 
-
-.portfolio_list, 
-.portfolio_image {
-  margin: 0;
-  margin-top: 20px;
-  padding: 0;
-  width: 100%;
-  /* height: 100%; */
-  height: 90%;
-  /* max-height: 600px; */  
-
-} 
-
-
-
-/* .portfolio_list_container */
-.portfolio_list_container {
+/* .PortfolioList */
+.PortfolioList {
   padding: 0 30px;
   flex-basis: 40%;
+
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -69,7 +56,7 @@
   padding: 20px;
   border: 1px solid #000  ;
   /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
-  width: 100%;
+  width: 90%;
   /* min-width: 600px; */
 
 
@@ -102,7 +89,7 @@
 
   padding: 14px;
   /* padding-left: 8px; */
-  width: 90%;
+  width: 80%;
   /* text-align: center; */
 
   transition: all .4s ease;
@@ -167,19 +154,14 @@
 
 
 /* .portfolio_data_container*/
-.portfolio_desc_container {
+.PortfolioDesc {
   flex-basis: 60%;
   height: 100%;
   min-height: 600px;
-  /* flex-grow: 2; */
 
-  /* background-color: aquamarine;  */
   overflow: scroll;
-
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-evenly; */
 }
+
 
 .portfolio__heading {
   padding: 0;
@@ -192,13 +174,17 @@
 
 .user_story, 
 .dev_story {
-  
+  /* text-align: center; */
 }
 
 .user_story__heading,
 .dev_story__heading {
   margin-top: 16px;
+  /* width: 100%; */
+
+  /* text-align: center; */
   font-size: 18px;
+
 
 }
 
@@ -215,13 +201,14 @@
 
 
 .portfolio_image {
+  margin: 0;
+  margin-top: 20px;
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   /* width: 89%; */
   width: 500px;
   min-height: 290px;
   overflow: scroll;
 }
-
 
 
 
@@ -232,8 +219,8 @@
     
   }
 
-  .portfolio_list_container,
-  .portfolio_desc_container {
+  .PortfolioList,
+  .PortfolioDesc {
     /* padding: 20px; */
     
   }
@@ -263,10 +250,6 @@
 
   }
 
-/* 
-.portfolio_image {
-  width: 72.3%;  
-} */
 
 
 }
@@ -290,7 +273,7 @@
   }
 
 
-  .portfolio_list_container {
+  .PortfolioList {
     /* padding: 20px 0; */
   }
 
@@ -326,12 +309,12 @@
     font-size: 24px;
   }
 
-  .portfolio_list_container,
-  .portfolio_desc_container {
+  .PortfolioList,
+  .PortfolioDesc {
     padding: 8px;
   }
 
-  .portfolio_list_container {
+  .PortfolioList {
     padding-top: 8px;
     height: 300px;
   }
@@ -368,7 +351,7 @@
 
 
   
-  .portfolio_desc_container {
+  .PortfolioDesc {
     min-height: 400px;
   }
 
