--- a/portfolio-site-react/src/components/PageContents/Skill/Skill.css
+++ b/portfolio-site-react/src/components/PageContents/Skill/Skill.css
@@ -38,16 +38,29 @@
 .skill__item_icon {
   margin-top: 12px;
   width: 100px;
-  height: 100px;
+  height: 100px;  
 
   opacity: 0.8;
   transition: all .4s ease;
+  
+}
+
+.flexbox-icon {
+  margin-top: 0;
+  width: 170px;
+  height: 170px;  
+
 }
 
 .skill__item_icon:hover {
   opacity: 1;
-  width:  150px;
-  height: 150px;
+  width:  120px;
+  height: 120px;
+}
+
+.flexbox-icon:hover {  
+  width: 190px;
+  height:190px;  
 }
 
 .coming_soon {
