CHNG: About Me into About

--- a/portfolio-site-react/src/components/PageList/PageList.css
+++ b/portfolio-site-react/src/components/PageList/PageList.css
@@ -69,13 +69,13 @@
 
 /** Menu/.SECTION-NAME, Footer/.SECTION-NAME,  **/
 
-.about_me:hover {
+.about:hover {
   background-color: hsl(100, 50%, 50%);
   background-image: url('https://images.unsplash.com/photo-1465809873722-b4bf7208d2b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=942&q=80');
   background-position: top;
 }
 
-.footer__item .about_me:hover {
+.footer__item .about:hover {
 background-position: center center;
 }
 
