CHNG: about_me into about

--- a/portfolio-site-react/src/components/Heading/Heading.css
+++ b/portfolio-site-react/src/components/Heading/Heading.css
@@ -47,7 +47,7 @@
 }
 
 
-#about_me .heading {
+#about .heading {
   /* box-shadow: 0 0 10px 10px hsl(109, 85%, 23%); */
   background-image: url('https://images.unsplash.com/photo-1465809873722-b4bf7208d2b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=942&q=80');
   /* color: hsl(109, 44%, 66%); */
